--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "mongoose": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -17,5 +19,18 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.1.0"
-  }
+  },
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/roger2020-ui/mern-stack-login.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/roger2020-ui/mern-stack-login/issues"
+  },
+  "homepage": "https://github.com/roger2020-ui/mern-stack-login#readme",
+  "description": ""
 }
