--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node backend/server.js",
+    "server": "nodemon backend/server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongoose": "^7.0.1",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
